# FPE_option

./: .gitignore  AGENTS.md  CALL_GRAPH.md  CHANGELOG.md  CONTRIBUTING.md  DEEPWIKI.md  IMPLEMENTATION_PLAN.md  LICENSE  MANIFEST.in  Mojo_Language_Advantages.md  NAIS_rBM.py  RADAU5_Algorithm_Report.md  README.md  THIRD_PARTY_NOTICES.md  _test_bench.mojo  _test_max.mojo  _test_par.mojo  algorithmic_report.md  analysis_report.py  check_pdf_drift.py  clean_duplicates.py  compare_both_q0.py  compare_fpe.py  compute_schur.py  debug_compare.py  debug_python_ref.py  dump_domain.txt  dump_matrices.mojo  dump_q0.txt  dump_q0_default.txt  dump_qT_scipy.txt  full_compare.py  generate_colab_nb.py  knots  mojoproject.toml  onestep_compare.py  pixi.toml  pyproject.toml  quick_compare.py  radau.md  (+15 more)
.sisyphus/: boulder.json
benchmarks/: Colab_FPE_Benchmark.ipynb  bench_admm_detail.mojo  bench_bspline.mojo  bench_empty.mojo  bench_fortran_lu_n1000.f  bench_fortran_n1000.f  bench_fortran_radau5.f  bench_fpe_solve.mojo  bench_gpu_batch_pricing.mojo  bench_initial_cond_profile.mojo  bench_inout_parity.mojo  bench_lu_n1000.mojo  bench_lu_solve.mojo  bench_lu_structure.mojo  bench_n1000.mojo  bench_nais_inference.mojo  bench_ndarray.mojo  bench_ndarray.py  bench_ndarray_binary  bench_ndarray_cpp  bench_ndarray_cpp.cpp  bench_osqp_profile.mojo  bench_osqp_real.mojo  bench_pricer.mojo  bench_pricing.mojo  bench_radau.mojo  bench_radau_fair.mojo  bench_radau_large.mojo  bench_radau_optimized.mojo  bench_radau_single_step.mojo  bench_radau_very_large.mojo  bench_sparse_lu_scaling.mojo  dc_lapack.f  (+12 more)
cpp/examples/: CMakeLists.txt  demo.cpp  live_trading  live_trading.cpp
(+260 files in other folders)
