[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fpe-engine"
version = "0.2.0"
description = "FPE Option Pricing Engine — Heston model with barrier options"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Knight" }]
keywords = ["finance", "options", "heston", "fokker-planck", "mojo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Mojo",
]
dependencies = [
    "numpy>=2.4",
    "scipy>=1.17",
]

[tool.setuptools.packages.find]
include = ["fpe_engine*"]

[tool.setuptools.package-data]
fpe_engine = ["*.so", "*.dylib", "py.typed"]
